--- a/index.html
+++ b/index.html
@@ -45,14 +45,22 @@
 
                             <div class="years-number">
                                 <label for="years-number">No. of Years</label>
-                                <input
+                                <select
                                     name="years-number"
-                                    type="number"
-                                    min="1"
-                                    value="1"
                                     id="yearsNumber"
                                     required
-                                />
+                                >
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+                                    <option value="9">9</option>
+                                    <option value="10">10</option>
+                                </select>
                             </div>
 
                             <input type="submit" value="Compute Interest" />
