--- a/index.html
+++ b/index.html
@@ -20,36 +20,30 @@
                             <div class="amount-number">
                                 <label for="amount-number">Amount</label>
                                 <input
-                                    name="amount-number"
+                                    name="principal"
                                     type="number"
                                     id="amountNumber"
-                                    required
                                 />
                             </div>
 
                             <div class="rate-slider">
                                 <label for="rate-slider">Interest Rate</label>
                                 <input
-                                    name="rate-slider"
+                                    name="interest-slider"
                                     type="range"
-                                    min="0"
-                                    max="21"
+                                    min="1"
+                                    max="20"
                                     step="0.1"
                                     value="10.5"
                                     class="slider"
                                     id="rateSlider"
-                                    required
                                 />
                                 <p><span id="rateVal"></span>%</p>
                             </div>
 
                             <div class="years-number">
                                 <label for="years-number">No. of Years</label>
-                                <select
-                                    name="years-number"
-                                    id="yearsNumber"
-                                    required
-                                >
+                                <select name="years-dropdown" id="yearsNumber">
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
@@ -72,7 +66,8 @@
                             if you deposit
                             <span id="amountOutput"></span>,<br />
                             at an interest rate of
-                            <span id="interestOutput"></span>%.<br />
+                            <span id="interestOutput"></span
+                            ><span>%</span>.<br />
                             You will recieve an amount of
                             <span id="calculatedAmountOutput"></span>,<br />
                             in the year
